Fix: z-index in intro section

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -51,7 +51,7 @@
         position: absolute
         top: 7rem
         left: 0
-        z-index: 10
+        z-index: 1000
         min-width: 20rem
         margin-top: 3rem
 
@@ -104,7 +104,7 @@
         position: absolute
         top: -1rem
         left: 20rem
-        z-index: 10
+        z-index: 1000
         min-width: 20rem
         opacity: 0
         visibility: hidden
@@ -139,7 +139,7 @@
     position: fixed
     top: 0
     right: -20rem
-    z-index: 1000
+    z-index: 1100
     width: 20rem
     height: calc(100vh)
     padding: 4rem 2rem
