--- a/sass/blocks/_intro-main.sass
+++ b/sass/blocks/_intro-main.sass
@@ -23,12 +23,16 @@
     justify-content: center
     flex-direction: column
   &__section-title
+    position: relative
+    z-index: 1000
     max-width: 63rem
     margin-bottom: 2.4rem
     text-align: center
     letter-spacing: 0.1em
     @include title($font-size: 6.4rem)
   &__button
+    position: relative
+    z-index: 1000
     display: inline-block
     padding: 1.6rem 2.4rem
     border-radius: 0.6rem
